--- a/ss1/b4/about.html
+++ b/ss1/b4/about.html
@@ -8,5 +8,10 @@
 <body>
     <h1>Đây là tiêu đề trang giới thiệu</h1>
     <h3>Đây là nội dung trang giới thiệu </h3>
+    <ul>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+    </ul>
 </body>
 </html>
