--- a/ss1/b4/contact.html
+++ b/ss1/b4/contact.html
@@ -8,5 +8,10 @@
 <body>
 <h1>Đây là tiêu đề trang liên hệ</h1>
 <h3>Đây là nội dung trang liên hệ</h3>
+<ul>
+    <li><a href="home.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="contact.html">Contact</a></li>
+</ul>
 </body>
 </html>
