--- a/ss2/b4/index.html
+++ b/ss2/b4/index.html
@@ -7,26 +7,30 @@
 </head>
 <body>
     <table border="1">
-        <tr>
-            <th style="text-align: center;">STT</th>
-            <th style="text-align: center;">Tên</th>
-            <th style="text-align: center;">Tuổi</th>
-        </tr>
-        <tr>
-            <td style="text-align: center;">1</td>
-            <td style="text-align: center; background-color: red; color: black;">Nguyễn Văn A</td>
-            <td style="text-align: center;">25</td>
-        </tr>
-        <tr>
-            <td style="text-align: center;">2</td>
-            <td style="text-align: center;">Trần Thị B</td>
-            <td style="text-align: center;">30</td>
-        </tr>
-        <tr>
-            <td style="text-align: center;">3</td>
-            <td style="text-align: center;">Lê Thị C</td>
-            <td style="text-align: center; background-color: yellow; color: black;">22</td>
-        </tr>
+        <thead>
+            <tr>
+                <th style="text-align: center;">STT</th>
+                <th style="text-align: center;">Tên</th>
+                <th style="text-align: center;">Tuổi</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td style="text-align: center;">1</td>
+                <td style="text-align: center; background-color: red; color: black;">Nguyễn Văn A</td>
+                <td style="text-align: center;">25</td>
+            </tr>
+            <tr>
+                <td style="text-align: center;">2</td>
+                <td style="text-align: center;">Trần Thị B</td>
+                <td style="text-align: center;">30</td>
+            </tr>
+            <tr>
+                <td style="text-align: center;">3</td>
+                <td style="text-align: center;">Lê Thị C</td>
+                <td style="text-align: center; background-color: yellow; color: black;">22</td>
+            </tr>
+        </tbody>       
     </table>
 </body>
 </html>
