--- a/ss2/b1/index.html
+++ b/ss2/b1/index.html
@@ -7,18 +7,22 @@
 </head>
 <body>
     <table border="1">
-        <tr>
-            <th>STT</th>
-            <th>Tên</th>
-        </tr>
-        <tr>
-            <td>1</td>
-            <td>Nguyễn Văn A</td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>Trần Thị B</td>
-        </tr>
+        <thead>
+            <tr>
+                <th>STT</th>
+                <th>Tên</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>Nguyễn Văn A</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Trần Thị B</td>
+            </tr>
+        </tbody>       
     </table>
 </body>
 </html>
