--- a/ss2/b5/index.html
+++ b/ss2/b5/index.html
@@ -7,21 +7,24 @@
 </head>
 <body>
     <table border="1">
-        <tr>
-            <th colspan="2">Thông Tin Cá Nhân</th>
-        </tr>
-        <tr>
-            <td style="text-align: center;">Họ Tên</td>
-            <td>Nguyễn A</td>
-        </tr>
-        <tr>
-            <td rowspan="2">Địa Chỉ</td>
-            <td>Hà Nội</td>
-        </tr>
-        <tr>
-            <td>Hồ Chí Minh</td>
-        </tr>
-
+        <thead>
+            <tr>
+                <th colspan="2">Thông Tin Cá Nhân</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td style="text-align: center;">Họ Tên</td>
+                <td>Nguyễn A</td>
+            </tr>
+            <tr>
+                <td rowspan="2">Địa Chỉ</td>
+                <td>Hà Nội</td>
+            </tr>
+            <tr>
+                <td>Hồ Chí Minh</td>
+            </tr>
+        </tbody>
     </table>
 </body>
 </html>
