--- a/ss2/b6/index.html
+++ b/ss2/b6/index.html
@@ -7,39 +7,43 @@
 </head>
 <body>
     <table border="1">
-        <tr>
-            <th>STT</th>
-            <th>NAME</th>
-            <th>AGE</th>
-            <th>EMAIL</th>
-            <th>STATUS</th>
-        </tr>
-        <tr>
-            <td>1</td>
-            <td>Nguyễn Văn A</td>
-            <td>18</td>
-            <td>NguyenVanA@gmail.com</td>
-            <td>Hoạt động</td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>Nguyễn Văn B</td>
-            <td>23</td>
-            <td>NguyenVanB@gmail.com</td>
-            <td>Hoạt động</td>
-        </tr><tr>
-            <td>3</td>
-            <td>Nguyễn Văn C</td>
-            <td>19</td>
-            <td>NguyenVanC@gmail.com</td>
-            <td>Hoạt động</td>
-        </tr><tr>
-            <td>4</td>
-            <td>Nguyễn Văn D</td>
-            <td>20</td>
-            <td>NguyenVanD@gmail.com</td>
-            <td>Không hoạt động</td>
-        </tr>
+        <thead>
+            <tr>
+                <th>STT</th>
+                <th>NAME</th>
+                <th>AGE</th>
+                <th>EMAIL</th>
+                <th>STATUS</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>Nguyễn Văn A</td>
+                <td>18</td>
+                <td>NguyenVanA@gmail.com</td>
+                <td>Hoạt động</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Nguyễn Văn B</td>
+                <td>23</td>
+                <td>NguyenVanB@gmail.com</td>
+                <td>Hoạt động</td>
+            </tr><tr>
+                <td>3</td>
+                <td>Nguyễn Văn C</td>
+                <td>19</td>
+                <td>NguyenVanC@gmail.com</td>
+                <td>Hoạt động</td>
+            </tr><tr>
+                <td>4</td>
+                <td>Nguyễn Văn D</td>
+                <td>20</td>
+                <td>NguyenVanD@gmail.com</td>
+                <td>Không hoạt động</td>
+            </tr>
+        </tbody>              
     </table>
 </body>
 </html>
