--- a/ss2/b7/index.html
+++ b/ss2/b7/index.html
@@ -4,15 +4,17 @@
 <title>Bảng Cơ Bản</title>
 </head>
 <body>
-    <table border="1" cellspacing="5">
-        <tr>
-            <th>STT</th>
-            <th>NAME</th>
-            <th>AGE</th>
-            <th>EMAIL</th>
-            <th>STATUS</th>
-            <th colspan="2" align="center">ACTIONS</th>
-          </tr>
+    <table border="1" cellspacing="6" cellpadding="1">
+        <thead>
+            <tr>
+                <th>STT</th>
+                <th>NAME</th>
+                <th>AGE</th>
+                <th>EMAIL</th>
+                <th>STATUS</th>
+                <th colspan="2" align="center">ACTIONS</th>
+              </tr>
+        </thead>
           <tr>
             <td>1</td>
             <td>Nguyễn Văn A</td>
@@ -49,6 +51,7 @@
             <td align="center"><button>SỬA</button></td>
             <td align="center"><button>XÓA</button></td>
           </tr>
+        </tbody>
     </table>
 </body>
 </html>
