--- a/ss3/b5/index.html
+++ b/ss3/b5/index.html
@@ -11,8 +11,7 @@
         <input type="text" id="name" name="name"><br>
 
         <label for="date and time">Chọn ngày giờ:</label>
-        <input type="date" id="date" name="date">
-        <input type="time" id="time" name="time"><br>
+        <input type="datetime-local" id="date-time" name="date-time"><br>
 
         <label for="service">Loại dịch vụ:</label>
         <select name="service" id="service">
