--- a/ss3/b7/index.html
+++ b/ss3/b7/index.html
@@ -55,8 +55,7 @@
         </select><br>
 
         <label for="date-time">Ngày đăng ký học:</label>
-        <input type="date" id="date" name="date">
-        <input type="time" id="time" name="time"><br>
+        <input type="datetime-local" id="date-time" name="date-time">
 
         <input type="submit" value="Gửi thông tin">
     </form>
