--- a/ss3/b6/index.html
+++ b/ss3/b6/index.html
@@ -14,11 +14,12 @@
         </select><br>
 
         <label for="quantity">Số lượng:</label>
-        <textarea name="quantity" id="quantity" rows="1"></textarea><br>
+        <input type="number" id="quantity" name="quantity" value="1"><br>
 
         <label for="address">Địa chỉ giao hàng:</label>
         <textarea name="address" id="address" rows="3" cols="20"></textarea><br>
-         <input type="submit" value="Đặt hàng">
+
+        <input type="submit" value="Đặt hàng">
     </form>
 </body>
 </html>
