--- a/ss3/b5/index.html
+++ b/ss3/b5/index.html
@@ -10,7 +10,7 @@
         <label for="name">Họ và tên:</label>
         <input type="text" id="name" name="name"><br>
 
-        <label for="date and time">Chọn ngày giờ:</label>
+        <label for="date-time">Chọn ngày giờ:</label>
         <input type="datetime-local" id="date-time" name="date-time"><br>
 
         <label for="service">Loại dịch vụ:</label>
