--- a/ss3/b9/index.html
+++ b/ss3/b9/index.html
@@ -8,69 +8,93 @@
 <body>
     <h2>Form Đăng Kí Thành Viên Hội Khăn Giấy Ướt :))</h2>
     <form action="duytan@gmail.com" method="post">
-        <label for="name">Họ và tên:</label>
-        <input type="text" id="name" name="name"><br>
-
-        <label for="date">Ngày sinh:</label>
-        <input type="date" id="date" name="date"><br>
-
-        <label for="gender">Giới tính:</label>
-        <input type="radio" id="man" name="gender" value="man">
-        <label for="man">Nam</label>
-        <input type="radio" id="feman" name="gender" value="feman">
-        <label for="feman">Nữ</label><br>
-
-        <label for="sdt">Số điện thoại:</label>
-        <input type="text" id="sdt" name="sdt"><br>
-
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email"><br>
-
-        <label for="adress">Địa chỉ:</label>
-        <textarea name="address" id="address" rows="3" cols="20"></textarea><br>
-
-        <label for="vaitro">Vai trò nhóm:</label>
-        <select name="vaitro" id="vaitro">
-            <option value="tv">Thành viên</option>
-            <option value="tn">Trưởng nhóm</option>
-            <option value="pn">Phó nhóm</option>
-        </select><br>
-
-        <label for="like">Sở thích:</label>
-        <input type="text" id="like" name="like"><br>
-
-        <label for="skills">Kỹ năng:</label>
-        <textarea name="skills" id="skills" rows="3" cols="20"></textarea><br>
-
-        <label for="freetime">Thời gian rảnh:</label>
-        <span class="checkmark"></span>
-        <input type="checkbox" id="s" name="s" value="s">
-        <label for="s">Sáng</label>
-        <input type="checkbox" id="c" name="c" value="c">
-        <label for="c">Chiều</label>
-        <input type="checkbox" id="t" name="t" value="t">
-        <label for="t">Tối</label><br>
-
-        <label for="why">Lý do tham gia nhóm:</label>
-        <textarea name="why" id="why" rows="3" cols="20"></textarea><br>
-
-        <label for="favorite-color">Màu yêu thích:</label>
-        <span class="color-picker">
-            <input type="color" id="favorite-color" name="favorite-color" value="#000000">
-        </span><br>
-
-        <label for="news">Đăng ký nhận bản tin:</label>
-        <span class="checkmark"></span>
-        <input type="checkbox" id="yes" name="yes" value="yes">
-        <label for="yes">Có</label><br>
-
-        <label for="tb">Nhận thông báo qua email:</label>
-        <input type="radio" id="e" name="tb" value="e">
-        <label for="e">Email</label>
-        <input type="radio" id="sms" name="tb" value="sms">
-        <label for="sms">SMS</label><br>
-
-        <input type="submit" value="Đăng ký thành viên">
+        <table>
+            <tr>
+                <td><label for="name">Họ và tên:</label></td>
+                <td><input type="text" id="name" name="name"></td>
+            </tr>
+            <tr>
+                <td><label for="date">Ngày sinh:</label></td>
+                <td><input type="date" id="date" name="date"></td>
+            </tr>
+            <tr>
+                <td><label for="gender">Giới tính:</label></td>
+                <td>
+                    <input type="radio" id="man" name="gender" value="man">
+                    <label for="man">Nam</label>
+                    <input type="radio" id="feman" name="gender" value="feman">
+                    <label for="feman">Nữ</label>
+                </td>
+            </tr>
+            <tr>
+                <td><label for="sdt">Số điện thoại:</label></td>
+                <td><input type="text" id="sdt" name="sdt"></td>
+            </tr>
+            <tr>
+                <td><label for="email">Email:</label></td>
+                <td><input type="email" id="email" name="email"></td>
+            </tr>
+            <tr>
+                <td><label for="adress">Địa chỉ:</label></td>
+                <td><textarea name="address" id="address" rows="3" cols="20"></textarea></td>
+            </tr>
+            <tr>
+                <td><label for="vaitro">Vai trò nhóm:</label></td>
+                <td>
+                    <select name="vaitro" id="vaitro">
+                        <option value="tv">Thành viên</option>
+                        <option value="tn">Trưởng nhóm</option>
+                        <option value="pn">Phó nhóm</option>
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td><label for="like">Sở thích:</label></td>
+                <td><input type="text" id="like" name="like"></td>
+            </tr>
+            <tr>
+                <td><label for="skills">Kỹ năng:</label></td>
+                <td><textarea name="skills" id="skills" rows="3" cols="20"></textarea></td>
+            </tr>
+            <tr>
+                <td><label for="freetime">Thời gian rảnh:</label></td>
+                <td>
+                    <input type="checkbox" id="s" name="s" value="s">
+                    <label for="s">Sáng</label>
+                    <input type="checkbox" id="c" name="c" value="c">
+                    <label for="c">Chiều</label>
+                    <input type="checkbox" id="t" name="t" value="t">
+                    <label for="t">Tối</label>
+                </td>
+            </tr>
+            <tr>
+                <td><label for="why">Lý do tham gia nhóm:</label></td>
+                <td><textarea name="why" id="why" rows="3" cols="20"></textarea></td>
+            </tr>
+            <tr>
+                <td><label for="favorite-color">Màu yêu thích:</label></td>
+                <td><input type="color" id="favorite-color" name="favorite-color" value="#000000"></td>
+            </tr>
+            <tr>
+                <td><label for="news">Đăng ký nhận bản tin:</label></td>
+                <td>
+                    <input type="checkbox" id="yes" name="yes" value="yes">
+                    <label for="yes">Có</label>
+                </td>
+            </tr>
+            <tr>
+                <td><label for="tb">Nhận thông báo qua email:</label></td>
+                <td>
+                    <input type="radio" id="e" name="tb" value="e">
+                    <label for="e">Email</label>
+                    <input type="radio" id="sms" name="tb" value="sms">
+                    <label for="sms">SMS</label>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2"><input type="submit" value="Đăng ký thành viên"></td>
+            </tr>
+        </table>
     </form>
 </body>
 </html>
