--- a/ss5/b1/index.html
+++ b/ss5/b1/index.html
@@ -23,7 +23,7 @@
     <p>
         Đây là trang web của tôi. Tôi đang học lập trình web và đây là sản phẩm đầu tiên của tôi.
     </p>
-    <img src="" alt="Đây là hình ảnh của tôi" width="200">
+    <img src="https://tuyendung3s.com/upload/images/anh-the-mau-trang.jpg" alt="Đây là hình ảnh của tôi" width="200">
     <p>Trang web được tạo bởi tôi.</p>
 </body>
 </html>
