--- a/ss5/b3/index.html
+++ b/ss5/b3/index.html
@@ -28,28 +28,32 @@
 </head>
 <body>
     <div style="font-family: Arial;">
-        <h1 style="text-align: right;">ADMIN  USER TABLE</h1>
+        <h1 style="text-align: right; text-align: center;">ADMIN  USER TABLE</h1>
 
         <table border="1">
             <tr id = "tieude">
                 <th>ID</th>
                 <th>USERNAME</th>
                 <th>EMAIL</th>
+                <th>ROLE</th>
             </tr>
             <tr>
                 <td>1</td>
                 <td>admin01</td>
                 <td>admin01@example.com</td>
+                <td>Administrator</td>
             </tr>
             <tr class = "even">
                 <td>2</td>
                 <td>user123</td>
                 <td>user123@example.com</td>
+                <td>User</td>
             </tr>
             <tr>
                 <td>3</td>
                 <td>moderator56</td>
                 <td>moderator56@example.com</td>
+                <td>Moderator</td>
             </tr>
         </table>
     </div>
