--- a/ss6/b1/index.html
+++ b/ss6/b1/index.html
@@ -67,7 +67,7 @@
     </div>
     <div class="profile">
         <div class="image">
-            <img src="https://tuyendung3s.com/upload/images/anh-the-mau-trang.jpg" alt="">
+            <img src="https://tuyendung3s.com/upload/images/anh-the-mau-trang.jpg" alt="lag">
         </div>
         <div class="content">
             <p>Xin chào! Tôi là Duy Tân, một lập trình viên đam mê học hỏi và sáng tạo.</p>
