--- a/ss6/b5/index.html
+++ b/ss6/b5/index.html
@@ -34,7 +34,7 @@
         .body {
             padding: 200px;
             text-align: center;
-            background-color: white;
+            background-color: rgb(213, 209, 209);
             color: black;
         }
         .button input {
