--- a/ss7/b4/index.html
+++ b/ss7/b4/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <style>
         body {
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: Arial, sans-serif;
             padding: 0;
             margin: 0;
         }
