--- a/ss7/b8/index.html
+++ b/ss7/b8/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <style>
         body {
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: Arial, sans-serif;
             display: flex;
             justify-content: center;
             align-items: center;
