--- a/ss11/b6/index.html
+++ b/ss11/b6/index.html
@@ -58,9 +58,9 @@
             border-radius: 0px 0px 40px 40px;
         }
         .header {
-            border-top: 50px solid #7a7aed;
+            border-top: 50px solid #2d2dc9;
             height: 30vh;
-            background-color: #b0b0ff;
+            background-color: #d855c2;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -78,21 +78,21 @@
             display: none;
         }
         #fea1 {
-            background-color: #e7ff6d;
+            background-color: #f7f307;
             width: 33%;
             display: flex;
             align-items: center;
             justify-content: center;
         }
         #fea2 {
-            background-color: #389fff;
+            background-color: #0084ff;
             width: 34%;
             display: flex;
             align-items: center;
             justify-content: center;
         }
         #fea3 {
-            background-color: #ff9d3c;
+            background-color: #ff8000;
             width: 33%;
             display: flex;
             align-items: center;
@@ -100,7 +100,7 @@
         }
         .signup1 {
             height: 40vh;
-            background-color: #bcf8ff;
+            background-color: #00d6ee;
             display: flex;
             align-items: center;
             justify-content: center;
